--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -6,5 +6,5 @@ zipStorePath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 
 
-org.gradle.java.home=/Applications/Android Studio.app/Contents/jre/Contents/Home
+org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk-17.0.4.1.jdk/Contents/Home
 
